# Qt-Image-Converter

./: BMPInfo.h  CMakeLists.txt  README.md  main.cpp
Draft/: Example.cpp
ImagePainter/: ImagePainter.cpp  ImagePainter.h
ImageProvider/: ImageProvider.cpp  ImageProvider.h
utils/: Material.h
